--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^5.2.1",
     "@supabase/supabase-js": "^2.53.0",
     "bcryptjs": "^3.0.2",
+    "browser-image-compression": "^2.0.2",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
@@ -22,6 +23,7 @@
     "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.344.0",
     "multer": "^2.0.2",
     "react": "^18.3.1",
